--- a/package.json
+++ b/package.json
@@ -2,20 +2,30 @@
   "name": "sandeadry-scrapper",
   "version": "1.0.0",
   "description": "Scrape thousands of sanfoundry MCQs to JSON file",
-  "main": "index.js",
+  "main": "dist/Index.js",
   "repository": "https://github.com/smartclash/Sandeadry",
   "author": "Karan Sanjeev <yo@alphaman.me>",
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/cheerio": "^0.22.28",
+    "@types/jsdom": "^16.2.10",
     "@types/load-json-file": "^5.1.0",
     "@types/node": "^15.0.2",
     "@types/write-json-file": "^3.2.1",
+    "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.9",
+    "jsdom": "^16.5.3",
     "load-json-file": "^6.2.0",
     "write-json-file": "^4.3.0"
+  },
+  "scripts": {
+    "ts-watch": "tsc -w -p tsconfig.json",
+    "ts-build": "tsc -p tsconfig.json",
+    "dev": "nodemon ."
   }
 }
